LionsTruck/force-app/main/default/objects/L_AssetTruckServices__c/L_AssetTruckServices__c.object-meta.xml
<CustomObject>
    <description>Junction object between Asset and Truck Services</description>
    <label>Asset Truck Service</label>
    <nameField>
        <label>Asset Truck Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Truck Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>