LionsTruck/force-app/main/default/objects/L_AssetTruckServices__c/fields/L_AccountId__c.field-meta.xml
<CustomField>
    <fullName>L_AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Correspondent Client</description>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Truck Services</relationshipLabel>
    <relationshipName>Asset_Truck_Services</relationshipName>
    <type>Lookup</type>
</CustomField>