LionsTruck/force-app/main/default/objects/L_AssetTruckServices__c/fields/L_AssetId__c.field-meta.xml
<CustomField>
    <fullName>L_AssetId__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Truck Services</relationshipLabel>
    <relationshipName>Asset_Truck_Services</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>