LionsTruck/force-app/main/default/objects/L_AssetTruckServices__c/fields/L_AssetSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>L_AssetSerialNumber__c</fullName>
    <formula>L_AssetId__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Serial Number</label>
    <type>Text</type>
</CustomField>