LionsTruck/force-app/main/default/objects/L_AssetTruckServices__c/fields/L_AssetVIN__c.field-meta.xml
<CustomField>
    <fullName>L_AssetVIN__c</fullName>
    <formula>L_AssetId__r.L_VIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset VIN</label>
    <type>Text</type>
</CustomField>