LionsTruck/force-app/main/default/objects/L_AssetTruckServices__c/fields/L_IsActive__c.field-meta.xml
<CustomField>
    <fullName>L_IsActive__c</fullName>
    <description>To Calculate if the service is currently active</description>
    <formula>TODAY() &gt;=  L_StartDate__c &amp;&amp; TODAY() &lt;= L_EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>