LionsTruck/force-app/main/default/objects/L_AssetTruckServices__c/fields/L_StartDate__c.field-meta.xml
<CustomField>
    <fullName>L_StartDate__c</fullName>
    <description>Track when the Truck Service started</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>