LionsTruck/force-app/main/default/objects/L_AssetTruckServices__c/fields/L_TruckServiceId__c.field-meta.xml
<CustomField>
    <fullName>L_TruckServiceId__c</fullName>
    <label>Truck Service</label>
    <referenceTo>L_TruckServices__c</referenceTo>
    <relationshipLabel>Asset Truck Services</relationshipLabel>
    <relationshipName>Asset_Truck_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>